Update useState and fix scrollbar hidden

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    // box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+    display:none;
+}
+
 body {
     font-family: "Montserrat", sans-serif;
 }
